@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+server/player.c: Move clearing of monitor_spells to initial socket allocation.
+Fixes bug where spell updates would cease if player used a savebed and
+then played again on same server.
+MSW 2010-08-30
+
 Tentative fix for bug #3054686: unarmed combat xp goes to sorcery by default.
 When checking for chosen_skill, talismans were taking into account, which
 is a mistake.
